clusters/common/apps/home/tailscale-gateway/egress.yaml
apiVersion: v1
kind: Service
metadata:
  name: robbinsdale-envoy-gateway
  annotations:
    tailscale.com/tailnet-fqdn: robbinsdale-home-envoy-gateway.keiretsu.ts.net
    tailscale.com/proxy-group: common-egress
spec:
  externalName: placeholder
  type: ExternalName
  ports:
  - name: https
    port: 443
    protocol: TCP
  - name: pihole-tcp
    port: 53
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ottawa-envoy-gateway
  annotations:
    tailscale.com/tailnet-fqdn: ottawa-home-envoy-gateway.keiretsu.ts.net
    tailscale.com/proxy-group: common-egress
spec:
  externalName: placeholder
  type: ExternalName
  ports:
  - name: https
    port: 443
    protocol: TCP
  - name: pihole-tcp
    port: 53
    protocol: TCP
