clusters/common/apps/home/tailscale-gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ts
  labels:
    external-dns: ts
spec:
  gatewayClassName: home-ts
  listeners: 
    - name: wildcard-${CLUSTER_DOMAIN//./-}-https
      protocol: HTTPS
      port: 443
      hostname: "*.${CLUSTER_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - group: ''
          kind: Secret
          name: wildcard-${CLUSTER_DOMAIN//./-}
    - name: wildcard-${COMMON_DOMAIN//./-}-https
      protocol: HTTPS
      port: 443
      hostname: "*.${COMMON_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - group: ''
          kind: Secret
          name: wildcard-${COMMON_DOMAIN//./-}
    - name: http
      port: 80
      protocol: HTTP
    - name: pihole-udp
      protocol: UDP
      port: 53
      allowedRoutes:
        kinds:
        - kind: UDPRoute
    - name: pihole-tcp
      protocol: TCP
      port: 53
      allowedRoutes:
        kinds:
        - kind: TCPRoute
